Fixed section-show top spacing on mobile view

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -501,4 +501,8 @@ section {
             font-size: 26px;
         }
     }
+
+    section.section-show {
+        top: 80px;
+    }
 }
